--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Reaction Time Game</title>
+        <title>Touch the ball</title>
         <link
             rel="stylesheet"
             href="https://unpkg.com/tailwindcss@3.4.11/src/css/preflight.css"
@@ -12,9 +12,211 @@
     </head>
     <body>
         <div class="wrapper">
-            <input type="checkbox" name="bg" class="bg" />
-            <input type="checkbox" name="lv1" class="hit" />
-            <input type="checkbox" name="lv2" class="hit" />
+            <!-- Start modal -->
+            <div class="start modal">
+                <div>
+                    <span></span>
+                    <h1 class="title">
+                        Touch<br />
+                        the ball
+                    </h1>
+                    <label class="button">
+                        <input type="checkbox" name="start" class="button" />
+                        Start
+                    </label>
+                </div>
+            </div>
+
+            <!-- Out area -->
+            <input type="checkbox" name="out" class="out" />
+
+            <!-- Ball -->
+            <input type="checkbox" name="lv1" class="ball" />
+            <input type="checkbox" name="lv2" class="ball" />
+            <input type="checkbox" name="lv3" class="ball" />
+            <input type="checkbox" name="lv4" class="ball" />
+            <input type="checkbox" name="lv5" class="ball" />
+
+            <!-- Clear modal -->
+            <div class="clear modal" data-lv="0">
+                <div>
+                    <div style="font-size: 0.5em">
+                        <span style="--delay: 0s">L</span>
+                        <span style="--delay: 0.02s">E</span>
+                        <span style="--delay: 0.04s">V</span>
+                        <span style="--delay: 0.06s">E</span>
+                        <span style="--delay: 0.08s">L</span>
+                        <span style="--delay: 0.1s">1</span>
+                    </div>
+                    <div>
+                        <span style="--delay: 0.12s">S</span>
+                        <span style="--delay: 0.14s">T</span>
+                        <span style="--delay: 0.16s">A</span>
+                        <span style="--delay: 0.18s">R</span>
+                        <span style="--delay: 0.2s">T</span>
+                    </div>
+                </div>
+            </div>
+            <div class="clear modal" data-lv="1">
+                <div>
+                    <span style="--delay: 0s">C</span>
+                    <span style="--delay: 0.02s">L</span>
+                    <span style="--delay: 0.04s">E</span>
+                    <span style="--delay: 0.06s">A</span>
+                    <span style="--delay: 0.08s">R</span>
+                </div>
+                <div>
+                    <div style="font-size: 0.5em">
+                        <span style="--delay: 1.5s">L</span>
+                        <span style="--delay: 1.52s">E</span>
+                        <span style="--delay: 1.54s">V</span>
+                        <span style="--delay: 1.56s">E</span>
+                        <span style="--delay: 1.58s">L</span>
+                        <span style="--delay: 1.6s">2</span>
+                    </div>
+                    <div>
+                        <span style="--delay: 1.62s">S</span>
+                        <span style="--delay: 1.64s">T</span>
+                        <span style="--delay: 1.66s">A</span>
+                        <span style="--delay: 1.68s">R</span>
+                        <span style="--delay: 1.7s">T</span>
+                    </div>
+                </div>
+            </div>
+            <div class="clear modal" data-lv="2">
+                <div>
+                    <span style="--delay: 0s">C</span>
+                    <span style="--delay: 0.02s">L</span>
+                    <span style="--delay: 0.04s">E</span>
+                    <span style="--delay: 0.06s">A</span>
+                    <span style="--delay: 0.08s">R</span>
+                </div>
+                <div>
+                    <div style="font-size: 0.5em">
+                        <span style="--delay: 1.5s">L</span>
+                        <span style="--delay: 1.52s">E</span>
+                        <span style="--delay: 1.54s">V</span>
+                        <span style="--delay: 1.56s">E</span>
+                        <span style="--delay: 1.58s">L</span>
+                        <span style="--delay: 1.6s">3</span>
+                    </div>
+                    <div>
+                        <span style="--delay: 1.62s">S</span>
+                        <span style="--delay: 1.64s">T</span>
+                        <span style="--delay: 1.66s">A</span>
+                        <span style="--delay: 1.68s">R</span>
+                        <span style="--delay: 1.7s">T</span>
+                    </div>
+                </div>
+            </div>
+            <div class="clear modal" data-lv="3">
+                <div>
+                    <span style="--delay: 0s">C</span>
+                    <span style="--delay: 0.02s">L</span>
+                    <span style="--delay: 0.04s">E</span>
+                    <span style="--delay: 0.06s">A</span>
+                    <span style="--delay: 0.08s">R</span>
+                </div>
+                <div>
+                    <div style="font-size: 0.5em">
+                        <span style="--delay: 1.5s">L</span>
+                        <span style="--delay: 1.52s">E</span>
+                        <span style="--delay: 1.54s">V</span>
+                        <span style="--delay: 1.56s">E</span>
+                        <span style="--delay: 1.58s">L</span>
+                        <span style="--delay: 1.6s">4</span>
+                    </div>
+                    <div>
+                        <span style="--delay: 1.62s">S</span>
+                        <span style="--delay: 1.64s">T</span>
+                        <span style="--delay: 1.66s">A</span>
+                        <span style="--delay: 1.68s">R</span>
+                        <span style="--delay: 1.7s">T</span>
+                    </div>
+                </div>
+            </div>
+            <div class="clear modal" data-lv="4">
+                <div>
+                    <span style="--delay: 0s">C</span>
+                    <span style="--delay: 0.02s">L</span>
+                    <span style="--delay: 0.04s">E</span>
+                    <span style="--delay: 0.06s">A</span>
+                    <span style="--delay: 0.08s">R</span>
+                </div>
+                <div>
+                    <div style="font-size: 0.5em">
+                        <span style="--delay: 1.5s">L</span>
+                        <span style="--delay: 1.52s">E</span>
+                        <span style="--delay: 1.54s">V</span>
+                        <span style="--delay: 1.56s">E</span>
+                        <span style="--delay: 1.58s">L</span>
+                        <span style="--delay: 1.6s">5</span>
+                    </div>
+                    <div>
+                        <span style="--delay: 1.62s">S</span>
+                        <span style="--delay: 1.64s">T</span>
+                        <span style="--delay: 1.66s">A</span>
+                        <span style="--delay: 1.68s">R</span>
+                        <span style="--delay: 1.7s">T</span>
+                    </div>
+                </div>
+            </div>
+            <div class="allClear modal">
+                <div class="text">
+                    <div style="font-size: 1rem">
+                        <span style="--delay: 0s">C</span>
+                        <span style="--delay: 0.02s">O</span>
+                        <span style="--delay: 0.04s">N</span>
+                        <span style="--delay: 0.06s">G</span>
+                        <span style="--delay: 0.08s">R</span>
+                        <span style="--delay: 0.1s">T</span>
+                        <span style="--delay: 0.12s">U</span>
+                        <span style="--delay: 0.14s">L</span>
+                        <span style="--delay: 0.16s">A</span>
+                        <span style="--delay: 0.18s">T</span>
+                        <span style="--delay: 0.2s">I</span>
+                        <span style="--delay: 0.22s">O</span>
+                        <span style="--delay: 0.24s">N</span>
+                        <span style="--delay: 0.26s">S</span>
+                    </div>
+                    <div>
+                        <span style="--delay: 1s">Y</span>
+                        <span style="--delay: 1.02s">O</span>
+                        <span style="--delay: 1.04s">U</span>
+                        <span></span>
+                        <span style="--delay: 1.06s">W</span>
+                        <span style="--delay: 1.08s">I</span>
+                        <span style="--delay: 1.1s">N</span>
+                    </div>
+                </div>
+                <div class="confetti">
+                    <span></span><span></span><span></span> <span></span
+                    ><span></span><span></span> <span></span><span></span
+                    ><span></span> <span></span><span></span>
+                </div>
+            </div>
+
+            <!-- Miss Modal -->
+            <div class="miss modal">
+                <div>
+                    <span>MISS!!</span>
+                    <button type="button" class="button" onclick="reset()">
+                        Retry
+                    </button>
+                </div>
+            </div>
         </div>
+
+        <script>
+            const reset = () => {
+                document.querySelector('.start').style.display = 'none'
+                document
+                    .querySelectorAll('input[type="checkbox"]')
+                    .forEach((checkbox) => (checkbox.checked = false))
+                setTimeout(() => {
+                    document.querySelector('[name="start"]').checked = true
+                }, 0)
+            }
+        </script>
     </body>
 </html>
