--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <!-- Miss Modal -->
             <div class="miss modal">
                 <div>
-                    <span>MISS!!</span>
+                    <div>MISS!!</div>
                     <button type="button" class="button" onclick="reset()">
                         Retry
                     </button>
