--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </head>
     <body>
         <div class="wrapper">
-            <!-- Start modal -->
-            <div class="start modal">
+            <!-- TitleView modal -->
+            <div class="titleView modal">
                 <div>
                     <span></span>
                     <h1 class="title">
