改行にaria属性追加

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <div>
                     <span></span>
                     <h1 class="title">
-                        Touch<br />
-                        the ball
+                        Touch<br aria-hidden="true" />the ball
                     </h1>
                     <label class="button">
                         <input type="checkbox" name="start" />
